[gd_scene load_steps=2 format=3 uid="uid://di852f1fesnin"]

[ext_resource type="Script" path="res://Scenes/Prefabs/Item.gd" id="1_xmlpm"]

[node name="Item" type="Node2D"]
script = ExtResource("1_xmlpm")

[node name="HandAnchor" type="Node2D" parent="."]

[node name="TileCentreAnchor" type="Node2D" parent="."]

[node name="SpriteContainer" type="Node2D" parent="."]
